# ghc-hs-meta

./: CHANGELOG.md  LICENSE  README.md  ghc-hs-meta.cabal  ghc-meta.cabal
.github/workflows/: build.yml
src/GHC/Meta/: Parse.hs  Parser.hs  ParserEx.hs  Settings.hs  ToExp.hs
src/Language/Haskell/Meta/: Parse.hs  Settings.hs  Translate.hs
test/: Main.hs
