cabal-version: 2.4
name: ghc-hs-meta
version: 0.1.5.0
build-type: Simple
author: Zachary Wood
maintainer: amesgen@amesgen.de
license: BSD-3-Clause
license-files:
  LICENSE
  LICENSE-PyF

synopsis: Translate Haskell source to Template Haskell expression
description: Translate from Haskell source code to Template Haskell expressions using the GHC parser
category: ghc,template-haskell
tested-with:
  ghc ==8.10.7
  ghc ==9.0.2
  ghc ==9.2.8
  ghc ==9.4.8
  ghc ==9.6.6
  ghc ==9.8.4
  ghc ==9.10.1
  ghc ==9.12.1

extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Language.Haskell.Meta.Parse
    Language.Haskell.Meta.Settings
    Language.Haskell.Meta.Translate

  hs-source-dirs:
    src

  default-extensions:
    LambdaCase
    TemplateHaskell

  ghc-options: -Wall
  build-depends:
    base >=4.14 && <4.22,
    bytestring >=0.10 && <0.13,
    ghc >=8.10.7 && <9.13,
    ghc-boot >=8.10.7 && <9.13,
    template-haskell >=2.16.0 && <2.24,

  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
    TemplateHaskell

  hs-source-dirs:
    test

  build-depends:
    base,
    bytestring,
    ghc,
    ghc-boot,
    ghc-hs-meta,
    hspec,
    template-haskell,

source-repository head
  type: git
  location: https://github.com/zacwood9/ghc-hs-meta
