cabal-version: 1.12

name:           ghc-meta
version:        0.0.0.2
build-type:     Simple

library
  exposed-modules:
      GHC.Meta.Parse
      GHC.Meta.Settings
      GHC.Meta.ToExp
  other-modules:
      Paths_ghc_meta
  hs-source-dirs:
      src
  default-extensions:
      TemplateHaskell
      LambdaCase
  ghc-options: -Wall
  build-depends:
      base >=4.14 && <4.17
    , ghc
    , ghc-boot
    , template-haskell
    , bytestring
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
      TemplateHaskell
  hs-source-dirs:
    test
  build-depends:
      base
    , template-haskell
    , ghc
    , ghc-boot
    , hspec
    , bytestring
    , ghc-meta