cabal-version:  2.4

name:           ghc-meta
version:        0.1.0.0
build-type:     Simple
author:         Zachary Wood
maintainer:     zac.wood@hey.com
license:        BSD-3-Clause
license-files:  LICENSE LICENSE-PyF
synopsis:       Haskell source -> Template Haskell expression
description:    Generate Template Haskell expressions from Haskell source code using the GHC parser
category:       ghc,template-haskell
tested-with:    GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.1

extra-source-files: CHANGELOG.md README.md

library
  exposed-modules:
      GHC.Meta.Parse
      GHC.Meta.Settings
      GHC.Meta.ToExp
  hs-source-dirs:
      src
  default-extensions:
      TemplateHaskell
      LambdaCase
  ghc-options: -Wall
  build-depends:
      base >=4.14 && <4.17
    , ghc
    , ghc-boot
    , template-haskell
    , bytestring
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
      TemplateHaskell
  hs-source-dirs:
    test
  build-depends:
      base
    , template-haskell
    , ghc
    , ghc-boot
    , hspec
    , bytestring
    , ghc-meta

source-repository head
  type:     git
  location: https://github.com/zacwood9/ghc-meta